# massimal-machine-learning

./: .gitignore  README.md  main.py  pyproject.toml
examples/: create_train_unet.py  create_unet.py  create_unet_torch.py  group_annotations.py
notebooks/: prelim_torch_unet.ipynb
src/massimal_machine_learning/: __init__.py  annotation.py  data_balancing.py  hyspec_cnn.py  hyspec_cnn_torch.py  hyspec_io.py  hyspec_ml.py  pca.py
tests/: test_annotation.py
